# SPO_lab1.5

./: CMakeLists.txt  mt.h
api/: api.c  api.h
client/: client.c
parser/: parser.c  parser.h
server/: server.c
util/: util.c  util.h
